--- a/miniverse/html/evento_sazonal.html
+++ b/miniverse/html/evento_sazonal.html
@@ -12,11 +12,11 @@
 </head>
 
 <body>
-    <header style="font-size: 20px; background-color: #092e2b;" id="inicio">
-        <div class="line"></div>
+    <header style="font-size: 20px; background-color: black;" id="inicio">
+        <div class="line" style="filter: hue-rotate(230deg)"></div>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a href="index.html"><img src="../images/logo_miniverse_minimalista.png" style="width: 55px;"></a>
+                <a href="index.html"><img src="../images/logo_miniverse_minimalista.png" style="width: 55px; filter: hue-rotate(230deg)"></a>
                 <p class="miniverse">MINIVERSE</p>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -27,26 +27,26 @@
                     <div style="margin-left: auto; margin-right: auto;  ">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                             <li class="nav-item">
-                                <a class="nav-link a_li_header" aria-current="page" href="index.html">Home</a>
+                                <a class="nav-link a_li_header_halloween" aria-current="page" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link a_li_header" href="produtos.html">Produtos</a>
+                                <a class="nav-link a_li_header_halloween" href="produtos.html">Produtos</a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle a_li_header" href="#" role="button"
+                                <a class="nav-link dropdown-toggle a_li_header_halloween" href="#" role="button"
                                     data-bs-toggle="dropdown" aria-expanded="false">
                                     Marcas
                                 </a>
                                 <ul class="dropdown-menu dropmenu-marcas">
-                                    <li><a class="dropdown-item a_li_header" href="produtos.html#marvel">Marvel</a></li>
-                                    <li><a class="dropdown-item a_li_header" href="produtos.html#dc">DC</a></li>
-                                    <li><a class="dropdown-item a_li_header" href="produtos.html#dragonball">Dragon
+                                    <li><a class="dropdown-item a_li_header_halloween" href="produtos.html#marvel">Marvel</a></li>
+                                    <li><a class="dropdown-item a_li_header_halloween" href="produtos.html#dc">DC</a></li>
+                                    <li><a class="dropdown-item a_li_header_halloween" href="produtos.html#dragonball">Dragon
                                             Ball</a></li>
-                                    <li><a class="dropdown-item a_li_header" href="produtos.html#tlou">The Last of
+                                    <li><a class="dropdown-item a_li_header_halloween" href="produtos.html#tlou">The Last of
                                             Us</a></li>
-                                    <li><a class="dropdown-item a_li_header" href="produtos.html#starwars">Star Wars</a>
+                                    <li><a class="dropdown-item a_li_header_halloween" href="produtos.html#starwars">Star Wars</a>
                                     </li>
-                                    <li><a class="dropdown-item a_li_header" href="produtos.html#seresmito">Seres
+                                    <li><a class="dropdown-item a_li_header_halloween" href="produtos.html#seresmito">Seres
                                             Mitológicos</a></li>
                                 </ul>
                             </li>
@@ -78,7 +78,7 @@
                         style="height: 400px;">
                     <div class="card-body">
                         <h5 class="card-title">Jason Voorhees</h5>
-                        <p class="card-text">R$ 449,90</p>
+                        <p class="card-text">R$ 519,90</p>
                         <a href="./produtos_halloween/jason.html" class="btn button_halloween">Ver
                             miniatura</a>
                     </div>
@@ -90,7 +90,7 @@
                         style="height: 400px;">
                     <div class="card-body">
                         <h5 class="card-title">Pennywise</h5>
-                        <p class="card-text">R$ 449,90</p>
+                        <p class="card-text">R$ 549,90</p>
                         <a href="./produtos_halloween/pennywise.html"
                             class="btn button_halloween">Ver miniatura</a>
                     </div>
@@ -102,7 +102,7 @@
                         style="height: 400px;">
                     <div class="card-body">
                         <h5 class="card-title">Ghostface</h5>
-                        <p class="card-text">R$ 449,90</p>
+                        <p class="card-text">R$ 509,90</p>
                         <a href="./produtos_halloween/ghostface.html"
                             class="btn button_halloween">Ver miniatura</a>
                     </div>
