--- a/miniverse/html/marvel/capitaoAmerica.html
+++ b/miniverse/html/marvel/capitaoAmerica.html
@@ -67,14 +67,14 @@
   </header>
 
   <div class="quadrado">
-    <div class="rota">Início > Marca > Marvel > Capitão America</div>
+    <div class="rota">Início > Marca > Marvel > Capitão América</div>
 
     <div class="produto">
       <div class="galeria">
-        <img src="../../images/produtos_marvel/CapitãoAmerica.png" alt="Capitão America">
+        <img src="../../images/produtos_marvel/CapitãoAmerica.png" alt="Capitão América">
       </div>
       <div class="informacoes">
-        <h1>Capitão America</h1>
+        <h1>Capitão América</h1>
         <p>Código: 1003</p>
 
         <span class="badge badge-premium">Marvel</span>
@@ -83,7 +83,7 @@
         <span class="badge badge-pintura">Pintura a mão</span>
 
         <div class="pix">R$ 539,90 no Pix</div>
-        <div class="juros">ou 6x de R$ 120,00 sem juros</div>
+        <div class="juros">ou 6x de R$ 100,00 sem juros</div>
 
         <div class="secao-compra">
           <div class="Quantidade">
@@ -98,65 +98,76 @@
         </div>
       </div>
     </div>
-  </div>
 
     <div class="descricao">
-  <h2>Descrição do Produto</h2>
-  <p>
-    <strong>Traga o espírito do Primeiro Vingador para sua coleção!</strong>  
-    Esta miniatura exclusiva do <strong>Capitão América</strong> é uma homenagem fiel ao lendário herói que simboliza coragem, honra e determinação. Produzida com tecnologia de impressão 3D de alta precisão, cada peça é cuidadosamente revisada para garantir qualidade e fidelidade aos detalhes do uniforme clássico de Steve Rogers.
-  </p>
-  <p>
-    O processo de criação combina engenharia de ponta com acabamento artesanal. Após a impressão em camadas ultrafinas (resolução de 0.1mm), a peça é submetida a um processo de endurecimento térmico e polimento manual em múltiplas etapas.  
-    A pintura é realizada à mão, com tintas acrílicas premium e verniz protetor UV, resultando em cores vibrantes — o azul, o vermelho e o branco da bandeira americana — com acabamento fosco e metálico em pontos estratégicos.
-  </p>
-  <p>
-    <strong>Detalhes Imperdíveis:</strong> O traje apresenta o icônico escudo circular com efeito metálico e textura realista, preso ao braço esquerdo do herói.  
-    O uniforme traz costuras, placas e faixas minuciosamente reproduzidas, com destaque para o emblema estrelado no peito.  
-    A pose dinâmica representa o Capitão pronto para a batalha — firme, confiante e com o escudo erguido, simbolizando proteção e bravura.
-  </p>
+      <h2>Descrição do Produto</h2>
+      <p>
+        <strong>Traga o espírito do Primeiro Vingador para sua coleção!</strong>
+        Esta miniatura exclusiva do <strong>Capitão América</strong> é uma homenagem fiel ao lendário herói que
+        simboliza
+        coragem, honra e determinação. Produzida com tecnologia de impressão 3D de alta precisão, cada peça é
+        cuidadosamente revisada para garantir qualidade e fidelidade aos detalhes do uniforme clássico de Steve Rogers.
+      </p>
+      <p>
+        O processo de criação combina engenharia de ponta com acabamento artesanal. Após a impressão em camadas
+        ultrafinas
+        (resolução de 0.1mm), a peça é submetida a um processo de endurecimento térmico e polimento manual em múltiplas
+        etapas.
+        A pintura é realizada à mão, com tintas acrílicas premium e verniz protetor UV, resultando em cores vibrantes —
+        o
+        azul, o vermelho e o branco da bandeira americana — com acabamento fosco e metálico em pontos estratégicos.
+      </p>
+      <p>
+        <strong>Detalhes Imperdíveis:</strong> O traje apresenta o icônico escudo circular com efeito metálico e textura
+        realista, preso ao braço esquerdo do herói.
+        O uniforme traz costuras, placas e faixas minuciosamente reproduzidas, com destaque para o emblema estrelado no
+        peito.
+        A pose dinâmica representa o Capitão pronto para a batalha — firme, confiante e com o escudo erguido,
+        simbolizando
+        proteção e bravura.
+      </p>
 
-  <h3>Especificações Técnicas</h3>
-  <ul class="especificacoes">
-    <li><strong>Material:</strong> PLA+ premium biodegradável, resistente e livre de toxinas</li>
-    <li><strong>Dimensões:</strong> 15cm (altura) x 8cm (largura) x 7cm (profundidade)</li>
-    <li><strong>Peso:</strong> 210g (base reforçada para estabilidade)</li>
-    <li><strong>Acabamento:</strong> Pintura artesanal com 6 camadas + verniz protetor fosco</li>
-    <li><strong>Base:</strong> Inclusa – circular preta com logo dos Vingadores em alto relevo</li>
-    <li><strong>Resolução de impressão:</strong> 0.1mm (detalhamento ultra preciso)</li>
-    <li><strong>Temperatura de resistência:</strong> Até 60°C</li>
-    <li><strong>Tempo de produção:</strong> 3-5 dias úteis (peça feita sob encomenda)</li>
-    <li><strong>Garantia:</strong> 90 dias contra defeitos de fabricação</li>
-    <li><strong>Certificação:</strong> Produto artesanal registrado e numerado</li>
-  </ul>
+      <h3>Especificações Técnicas</h3>
+      <ul class="especificacoes">
+        <li><strong>Material:</strong> PLA+ premium biodegradável, resistente e livre de toxinas</li>
+        <li><strong>Dimensões:</strong> 15cm (altura) x 8cm (largura) x 7cm (profundidade)</li>
+        <li><strong>Peso:</strong> 210g (base reforçada para estabilidade)</li>
+        <li><strong>Acabamento:</strong> Pintura artesanal com 6 camadas + verniz protetor fosco</li>
+        <li><strong>Base:</strong> Inclusa – circular preta com logo dos Vingadores em alto relevo</li>
+        <li><strong>Resolução de impressão:</strong> 0.1mm (detalhamento ultra preciso)</li>
+        <li><strong>Temperatura de resistência:</strong> Até 60°C</li>
+        <li><strong>Tempo de produção:</strong> 3-5 dias úteis (peça feita sob encomenda)</li>
+        <li><strong>Garantia:</strong> 90 dias contra defeitos de fabricação</li>
+        <li><strong>Certificação:</strong> Produto artesanal registrado e numerado</li>
+      </ul>
 
-  <h3>Cuidados e Conservação</h3>
-  <ul class="especificacoes">
-    <li><strong>Limpeza:</strong> Use pano macio e seco. Evite produtos abrasivos</li>
-    <li><strong>Exposição:</strong> Mantenha fora da luz solar direta e umidade excessiva</li>
-    <li><strong>Armazenamento:</strong> Local seco, temperatura ambiente (15-25°C)</li>
-    <li><strong>Manuseio:</strong> Segure sempre pela base — o escudo é parte delicada da peça</li>
-  </ul>
+      <h3>Cuidados e Conservação</h3>
+      <ul class="especificacoes">
+        <li><strong>Limpeza:</strong> Use pano macio e seco. Evite produtos abrasivos</li>
+        <li><strong>Exposição:</strong> Mantenha fora da luz solar direta e umidade excessiva</li>
+        <li><strong>Armazenamento:</strong> Local seco, temperatura ambiente (15-25°C)</li>
+        <li><strong>Manuseio:</strong> Segure sempre pela base — o escudo é parte delicada da peça</li>
+      </ul>
 
-  <h3>Por que escolher Miniverse?</h3>
-  <p class="pq_escolher">
-    ✓ <strong>Qualidade Premium:</strong> Cada miniatura é feita individualmente, sem produção em massa<br>
-    ✓ <strong>Sustentabilidade:</strong> Material PLA biodegradável e processo ecologicamente responsável<br>
-    ✓ <strong>Artesanato Local:</strong> Produção nacional feita por artistas brasileiros<br>
-    ✓ <strong>Embalagem Especial:</strong> Caixa colecionável com espuma protetora<br>
-    ✓ <strong>Certificado de Autenticidade:</strong> Numerado e assinado pelo artista responsável<br>
-    ✓ <strong>Envio Seguro:</strong> Embalagem reforçada e rastreamento completo até a entrega
-  </p>
+      <h3>Por que escolher Miniverse?</h3>
+      <p class="pq_escolher">
+        ✓ <strong>Qualidade Premium:</strong> Cada miniatura é feita individualmente, sem produção em massa<br>
+        ✓ <strong>Sustentabilidade:</strong> Material PLA biodegradável e processo ecologicamente responsável<br>
+        ✓ <strong>Artesanato Local:</strong> Produção nacional feita por artistas brasileiros<br>
+        ✓ <strong>Embalagem Especial:</strong> Caixa colecionável com espuma protetora<br>
+        ✓ <strong>Certificado de Autenticidade:</strong> Numerado e assinado pelo artista responsável<br>
+        ✓ <strong>Envio Seguro:</strong> Embalagem reforçada e rastreamento completo até a entrega
+      </p>
 
-  <div class="acompanha">
-    <p>
-      <strong>📦 O que acompanha:</strong> Miniatura Capitão América pintada à mão,  
-      base circular com logo dos Vingadores, certificado de autenticidade numerado, manual de cuidados  
-      e embalagem colecionável premium.
-    </p>
+      <div class="acompanha">
+        <p>
+          <strong>📦 O que acompanha:</strong> Miniatura Capitão América pintada à mão,
+          base circular com logo dos Vingadores, certificado de autenticidade numerado, manual de cuidados
+          e embalagem colecionável premium.
+        </p>
+      </div>
+    </div>
   </div>
-</div>
-
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
