--- a/miniverse/html/planos.html
+++ b/miniverse/html/planos.html
@@ -100,7 +100,6 @@
 
 
     <div class="row justify-content-center g-4 slider_cards text-center" style="padding: 0%; width: 100%;">
-
         <div style="padding: 0%;">
             <h1 style="color: white; margin-top: 2%; margin-bottom: 1%;">Nossos planos</h1>
         </div>
@@ -113,8 +112,8 @@
                     <h5 class="card-title" style="font-size: 3.5vh;">Herói</h5>
                     <p class="text_desconto card-text" style="font-size: 2vh; line-height: 2.3;">Uma miniatura pequena
                         exclusiva por mês<br>Acesso antecipado a novos lançamentos</p>
-                    <p class="card-text" style="font-size: 2.5vh; margin-top: 118px; margin-bottom: 0%;">R$ 149,90/mês</p>
-                    <a href="./tlou/abby.html" class="btn btn-outline-success button"
+                    <p class="card-text" style="font-size: 2.5vh; margin-top: 120px; margin-bottom: 0%;">R$ 149,90/mês</p>
+                    <a href="carrinho.html" class="btn btn-outline-success button"
                         style="margin-top: 2%;">Assinar</a>
                 </div>
             </div>
@@ -129,10 +128,11 @@
                     <p class="text_desconto card-text" style="font-size: 2vh; margin-top: 5%; line-height: 2.3;">Uma miniatura média
                         exclusiva por mês <br> Desconto de 10% em outras compras</p>
                     <p class="card-text" style="font-size: 2.5vh; margin-bottom: 0%; margin-top: 106px;">R$ 249,90/mês</p>
-                    <a href="./dc/batman.html" class="btn btn-outline-success button" style="margin: 2%;">Assinar</a>
+                    <a href="carrinho.html" class="btn btn-outline-success button" style="margin: 2%;">Assinar</a>
                 </div>
             </div>
         </div>
+
         <div class="col-10 col-sm-6 col-md-4 col-lg-3" style="width: 25%;">
             <div class="card card_lancamento border-0 h-100">
                 <div class="card-body">
@@ -142,8 +142,8 @@
                     <p class="text_desconto card-text" style="font-size: 2vh; margin-top: 5%; line-height: 2.3;">Uma miniatura pequena
                         exclusiva <br>Uma miniatura grande exclusiva <br> Detalhamento especial, base customizada <br>Frete
                         grátis + 15% de desconto em todo o site</p>
-                    <p class="card-text" style="font-size: 2.5vh; margin-top: 50px; margin-bottom: 0%;">R$ 449,90/mês</p>
-                    <a href="./seresMito/medusa.html" class="btn btn-outline-success button"
+                    <p class="card-text" style="font-size: 2.5vh; margin-top: 22px; margin-bottom: 0%;">R$ 449,90/mês</p>
+                    <a href="carrinho.html" class="btn btn-outline-success button"
                         style="margin: 2%;">Assinar</a>
                 </div>
             </div>
