--- a/miniverse/html/produtos.html
+++ b/miniverse/html/produtos.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/produtos.css">
+    <link rel="shortcut icon" type="imagex/png" href="../images/logo_miniverse_minimalista.png" />
 </head>
 
 <body>
@@ -64,102 +65,287 @@
 
     <!--Produtos da Marvel-->
     <section id="marvel" class="marca-section">
-        <div class="container">
-            <h1>Marvel</h1>
-            <div class="row">
-                <div class="col">
+        <div class="container text-center" style="margin-top: 50px;">
+            <h1 style="color: red;">Marvel</h1>
+            <hr style="color: rgb(255, 0, 0); border: 0; border-top: 10px solid red;">
+            <div class="row text-center" style="margin-top: 20px;">
+                <div class="col-12 col-md-4" style="margin-bottom: 20px;">
+                    <div class="card card_lancamento card_marvel border-0 h-100">
+                        <img src="../images/produtos_marvel/HomemDeFerro.png" class="card-img-top" alt="Homem de Ferro"
+                            style="height: 400px;">
+                        <div class="card-body">
+                            <h5 class="card-title">Homem de Ferro</h5>
+                            <p class="card-text">R$ 599,90</p>
+                            <a href="./marvel/homemFerro.html" class="btn button_marvel">Ver
+                                miniatura</a>
+                        </div>
+                    </div>
 
                 </div>
-                <div class="col">
-
+                <div class="col-12 col-md-4" style="margin-bottom: 20px;">
+                    <div class="card card_lancamento card_marvel border-0 h-100">
+                        <img src="../images/produtos_marvel/CapitãoAmerica.png" class="card-img-top"
+                            alt="Capitão América" style="height: 400px;">
+                        <div class="card-body">
+                            <h5 class="card-title">Capitão América</h5>
+                            <p class="card-text">R$ 539,90</p>
+                            <a href="./marvel/capitaoAmerica.html" class="btn  button_marvel">Ver
+                                miniatura</a>
+                        </div>
+                    </div>
                 </div>
-                <div class="col">
 
+                <div class="col-12 col-md-4" style="margin-bottom: 20px;">
+                    <div class="card card_lancamento card_marvel border-0 h-100">
+                        <img src="../images/produtos_marvel/HomemAranha.png" class="card-img-top" alt="Homem-Aranha"
+                            style="height: 400px;">
+                        <div class="card-body">
+                            <h5 class="card-title">Homem-Aranha</h5>
+                            <p class="card-text">R$ 519,90</p>
+                            <a href="./marvel/homemAranha.html" class="btn  button_marvel">Ver
+                                miniatura</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+
     <!--Produtos da DC-->
     <section id="dc" class="marca-section">
-        <div class="container">
-            <h1>DC</h1>
-            <div class="row">
-                <div class="col">
+        <div class="container text-center" style="margin-top: 50px;">
+            <h1 style="color: blue;">DC</h1>
+            <hr style="color: rgb(0, 0, 255);  border: 0; border-top: 10px solid rgb(0, 0, 255);">
+            <div class="row text-center" style="margin-top: 20px;">
+                <div class="col-12 col-md-4" style="margin-bottom: 20px;">
+                    <div class="card card_lancamento card_dc border-0 h-100">
+                        <img src="../images/produtos_dc/Batman.png" class="card-img-top" alt="Batman"
+                            style="height: 400px;">
+                        <div class="card-body">
+                            <h5 class="card-title">Batman</h5>
+                            <p class="card-text">R$ 569,90</p>
+                            <a href="./dc/batman.html" class="btn  button_dc">Ver
+                                miniatura</a>
+                        </div>
+                    </div>
 
                 </div>
-                <div class="col">
-
+                <div class="col-12 col-md-4" style="margin-bottom: 20px;">
+                    <div class="card card_lancamento card_dc border-0 h-100">
+                        <img src="../images/produtos_dc/Superman.png" class="card-img-top" alt="Superman"
+                            style="height: 400px;">
+                        <div class="card-body">
+                            <h5 class="card-title">Superman</h5>
+                            <p class="card-text">R$ 549,90</p>
+                            <a href="./dc/superman.html" class="btn  button_dc">Ver
+                                miniatura</a>
+                        </div>
+                    </div>
                 </div>
-                <div class="col">
 
+                <div class="col-12 col-md-4" style="margin-bottom: 20px;">
+                    <div class="card card_lancamento card_dc border-0 h-100">
+                        <img src="../images/produtos_dc/Mulher.png" class="card-img-top" alt="Mulher-Maravilha"
+                            style="height: 400px;">
+                        <div class="card-body">
+                            <h5 class="card-title">Mulher-Maravilha</h5>
+                            <p class="card-text">R$ 529,90</p>
+                            <a href="./dc/mulherMaravilha.html" class="btn  button_dc">Ver
+                                miniatura</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+
     <!--Produtos do Dragon Ball-->
     <section id="dragonball" class="marca-section">
-        <div class="container">
-            <h1>Dragon Ball</h1>
-            <div class="row">
-                <div class="col">
+        <div class="container text-center" style="margin-top: 50px;">
+            <h1 style="color: rgba(255, 140, 0);">Dragon Ball</h1>
+            <hr style="color: rgba(255, 140, 0); border: 0; border-top: 10px solid rgb(255, 140, 0);">
+            <div class="row text-center" style="margin-top: 20px;">
+                <div class="col-12 col-md-4" style="margin-bottom: 20px;">
+                    <div class="card card_lancamento border-0 h-100">
+                        <img src="../images/produtos_dragonBall/Goku.png" class="card-img-top" alt="Goku"
+                            style="height: 400px;">
+                        <div class="card-body">
+                            <h5 class="card-title">Goku</h5>
+                            <p class="card-text">R$ 549,90</p>
+                            <a href="./dragonBall/goku.html" class="btn button button_">Ver
+                                miniatura</a>
+                        </div>
+                    </div>
 
                 </div>
-                <div class="col">
-
+                <div class="col-12 col-md-4" style="margin-bottom: 20px;">
+                    <div class="card card_lancamento border-0 h-100">
+                        <img src="../images/produtos_dragonBall/Vegeta.png" class="card-img-top" alt="Vegeta"
+                            style="height: 400px;">
+                        <div class="card-body">
+                            <h5 class="card-title">Vegeta</h5>
+                            <p class="card-text">R$ 529,90</p>
+                            <a href="./dragonBall/vegeta.html" class="btn button button_">Ver
+                                miniatura</a>
+                        </div>
+                    </div>
                 </div>
-                <div class="col">
 
+                <div class="col-12 col-md-4" style="margin-bottom: 20px;">
+                    <div class="card card_lancamento border-0 h-100">
+                        <img src="../images/produtos_dragonBall/Piccolo.png" class="card-img-top" alt="Piccolo"
+                            style="height: 400px;">
+                        <div class="card-body">
+                            <h5 class="card-title">Piccolo</h5>
+                            <p class="card-text">R$ 499,90</p>
+                            <a href="./dragonBall/piccolo.html" class="btn button button_">Ver
+                                miniatura</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+
     <!--Produtos de The Last of Us-->
     <section id="tlou" class="marca-section">
-        <div class="container">
-            <h1>The Last of Us</h1>
-            <div class="row">
-                <div class="col">
+        <div class="container text-center" style="margin-top: 50px;">
+            <h1 style="color: rgba(128, 64, 0);">The Last of Us</h1>
+            <hr style="color: rgba(128, 64, 0); border: 0; border-top: 10px solid rgb(128, 64, 0);">
+            <div class="row text-center" style="margin-top: 20px;">
+                <div class="col-12 col-md-4" style="margin-bottom: 20px;">
+                    <div class="card card_lancamento border-0 h-100">
+                        <img src="../images/produtos_tlou/Joel.png" class="card-img-top" alt="Joel"
+                            style="height: 400px;">
+                        <div class="card-body">
+                            <h5 class="card-title">Joel</h5>
+                            <p class="card-text">R$ 539,90</p>
+                            <a href="./tlou/joel.html" class="btn button button_">Ver
+                                miniatura</a>
+                        </div>
+                    </div>
 
                 </div>
-                <div class="col">
-
+                <div class="col-12 col-md-4" style="margin-bottom: 20px;">
+                    <div class="card card_lancamento border-0 h-100">
+                        <img src="../images/produtos_tlou/Ellie.png" class="card-img-top" alt="Ellie"
+                            style="height: 400px;">
+                        <div class="card-body">
+                            <h5 class="card-title">Ellie</h5>
+                            <p class="card-text">R$ 559,90</p>
+                            <a href="./tlou/ellie.html" class="btn button button_">Ver
+                                miniatura</a>
+                        </div>
+                    </div>
                 </div>
-                <div class="col">
 
+                <div class="col-12 col-md-4" style="margin-bottom: 20px;">
+                    <div class="card card_lancamento border-0 h-100">
+                        <img src="../images/produtos_tlou/Abby.png" class="card-img-top" alt="Abby"
+                            style="height: 400px;">
+                        <div class="card-body">
+                            <h5 class="card-title">Abby</h5>
+                            <p class="card-text">R$ 499,90</p>
+                            <a href="./tlou/abby.html" class="btn button button_">Ver
+                                miniatura</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+
     <!--Produtos de Star Wars-->
     <section id="starwars" class="marca-section">
-        <div class="container">
-            <h1>Star Wars</h1>
-            <div class="row">
-                <div class="col">
+        <div class="container text-center" style="margin-top: 50px;">
+            <h1 style="color: rgba(255, 215, 0);">Star Wars</h1>
+            <hr style="color: rgba(255, 215, 0); border: 0; border-top: 10px solid rgb(255, 215, 0);">
+            <div class="row text-center" style="margin-top: 20px;">
+                <div class="col-12 col-md-4" style="margin-bottom: 20px;">
+                    <div class="card card_lancamento border-0 h-100">
+                        <img src="../images/produtos_starWars/DarthVader.png" class="card-img-top" alt="Darth Vader"
+                            style="height: 400px;">
+                        <div class="card-body">
+                            <h5 class="card-title">Darth Vader</h5>
+                            <p class="card-text">R$ 599,90</p>
+                            <a href="./starWars/darthVader.html" class="btn button button_">Ver
+                                miniatura</a>
+                        </div>
+                    </div>
 
                 </div>
-                <div class="col">
-
+                <div class="col-12 col-md-4" style="margin-bottom: 20px;">
+                    <div class="card card_lancamento border-0 h-100">
+                        <img src="../images/produtos_starWars/Yoda.png" class="card-img-top" alt="Yoda"
+                            style="height: 400px;">
+                        <div class="card-body">
+                            <h5 class="card-title">Yoda</h5>
+                            <p class="card-text">R$ 519,90</p>
+                            <a href="./starWars/yoda.html" class="btn button button_">Ver
+                                miniatura</a>
+                        </div>
+                    </div>
                 </div>
-                <div class="col">
 
+                <div class="col-12 col-md-4" style="margin-bottom: 20px;">
+                    <div class="card card_lancamento border-0 h-100">
+                        <img src="../images/produtos_starWars/Leia.png" class="card-img-top" alt="Leia"
+                            style="height: 400px;">
+                        <div class="card-body">
+                            <h5 class="card-title">Leia</h5>
+                            <p class="card-text">R$ 499,90</p>
+                            <a href="./starWars/leia.html" class="btn button button_">Ver
+                                miniatura</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+
     <!--Produtos de Seres Mitológicos-->
     <section id="seresmito" class="marca-section">
-        <div class="container">
-            <h1>Seres Mitológicos</h1>
-            <div class="row">
-                <div class="col">
+        <div class="container text-center" style="margin-top: 50px;">
+            <h1 style="color: rgba(138, 43, 226);">Seres Mitológicos</h1>
+            <hr style="color: rgba(138, 43, 226); border: 0; border-top: 10px solid rgb(138, 43, 226);">
+            <div class="row text-center" style="margin-top: 20px;">
+                <div class="col-12 col-md-4" style="margin-bottom: 20px;">
+                    <div class="card card_lancamento border-0 h-100">
+                        <img src="../images/produtos_seresMito/Zeus.png" class="card-img-top" alt="Zeus"
+                            style="height: 400px;">
+                        <div class="card-body">
+                            <h5 class="card-title">Zeus</h5>
+                            <p class="card-text">R$ 569,90</p>
+                            <a href="./seresMito/zeus.html" class="btn button button_">Ver
+                                miniatura</a>
+                        </div>
+                    </div>
 
                 </div>
-                <div class="col">
-
+                <div class="col-12 col-md-4" style="margin-bottom: 20px;">
+                    <div class="card card_lancamento border-0 h-100">
+                        <img src="../images/produtos_seresMito/Minotauro.png" class="card-img-top" alt="Minotauro"
+                            style="height: 400px;">
+                        <div class="card-body">
+                            <h5 class="card-title">Minotauro</h5>
+                            <p class="card-text">R$ 519,90</p>
+                            <a href="./seresMito/minotauro.html" class="btn button button_">Ver
+                                miniatura</a>
+                        </div>
+                    </div>
                 </div>
-                <div class="col">
 
+                <div class="col-12 col-md-4" style="margin-bottom: 20px;">
+                    <div class="card card_lancamento border-0 h-100">
+                        <img src="../images/produtos_seresMito/Medusa.png" class="card-img-top" alt="Medusa"
+                            style="height: 400px;">
+                        <div class="card-body">
+                            <h5 class="card-title">Medusa</h5>
+                            <p class="card-text">R$ 539,90</p>
+                            <a href="./seresMito/medusa.html" class="btn button button_">Ver
+                                miniatura</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
