--- a/miniverse/html/produtos_halloween/ghostface.html
+++ b/miniverse/html/produtos_halloween/ghostface.html
@@ -38,7 +38,8 @@
                     <div style="margin-left: auto; margin-right: auto;  ">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                             <li class="nav-item">
-                                <a class="nav-link a_li_header_halloween" aria-current="page" href="../index.html">Home</a>
+                                <a class="nav-link a_li_header_halloween" aria-current="page"
+                                    href="../index.html">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link a_li_header_halloween" href="../produtos.html">Produtos</a>
@@ -49,16 +50,22 @@
                                     Marcas
                                 </a>
                                 <ul class="dropdown-menu dropmenu-marcas-halloween">
-                                    <li><a class="dropdown-item a_li_header_halloween" href="../produtos.html#marvel">Marvel</a>
+                                    <li><a class="dropdown-item a_li_header_halloween"
+                                            href="../produtos.html#marvel">Marvel</a>
                                     </li>
-                                    <li><a class="dropdown-item a_li_header_halloween" href="../produtos.html#dc">DC</a></li>
-                                    <li><a class="dropdown-item a_li_header_halloween" href="../produtos.html#dragonball">Dragon
+                                    <li><a class="dropdown-item a_li_header_halloween" href="../produtos.html#dc">DC</a>
+                                    </li>
+                                    <li><a class="dropdown-item a_li_header_halloween"
+                                            href="../produtos.html#dragonball">Dragon
                                             Ball</a></li>
-                                    <li><a class="dropdown-item a_li_header_halloween" href="../produtos.html#tlou">The Last of
+                                    <li><a class="dropdown-item a_li_header_halloween" href="../produtos.html#tlou">The
+                                            Last of
                                             Us</a></li>
-                                    <li><a class="dropdown-item a_li_header_halloween" href="../produtos.html#starwars">Star
+                                    <li><a class="dropdown-item a_li_header_halloween"
+                                            href="../produtos.html#starwars">Star
                                             Wars</a> </li>
-                                    <li><a class="dropdown-item a_li_header_halloween" href="../produtos.html#seresmito">Seres
+                                    <li><a class="dropdown-item a_li_header_halloween"
+                                            href="../produtos.html#seresmito">Seres
                                             Mitológicos</a></li>
                                 </ul>
                             </li>
@@ -109,6 +116,7 @@
         </div>
 
         <div class="halloween">
+
             <h2>Descrição do Produto</h2>
             <p>
                 <strong>Traga o terror icônico dos cinemas diretamente para sua coleção!</strong>
@@ -136,40 +144,86 @@
                 néon, adiciona um toque cinematográfico digno dos filmes de terror.
             </p>
 
-            <h3>Especificações Técnicas</h3>
-            <ul class="especificacoes_halloween">
-                <li><strong>Material:</strong> PLA+ premium importado (biodegradável e livre de toxinas)</li>
-                <li><strong>Dimensões:</strong> 17cm (altura) x 8cm (largura) x 7cm (profundidade)</li>
-                <li><strong>Peso:</strong> 210g (base reforçada para estabilidade)</li>
-                <li><strong>Acabamento:</strong> Pintura artesanal com 7 camadas + verniz protetor fosco</li>
-                <li><strong>Base:</strong> Inclusa – cenário de crime com respingos e efeitos de iluminação simulada
-                </li>
-                <li><strong>Resolução de impressão:</strong> 0.1mm (ultra detalhada)</li>
-                <li><strong>Temperatura de resistência:</strong> Até 60°C</li>
-                <li><strong>Tempo de produção:</strong> 3–5 dias úteis (cada peça é feita sob encomenda)</li>
-                <li><strong>Garantia:</strong> 90 dias contra defeitos de fabricação</li>
-                <li><strong>Certificação:</strong> Produto artesanal registrado</li>
-            </ul>
 
-            <h3>Cuidados e Conservação</h3>
-            <ul class="especificacoes_halloween">
-                <li><strong>Limpeza:</strong> Utilize pano macio e seco. Evite produtos químicos</li>
-                <li><strong>Exposição:</strong> Não exponha à luz solar direta ou calor excessivo</li>
-                <li><strong>Armazenamento:</strong> Guarde em local seco, arejado e protegido da umidade</li>
-                <li><strong>Manuseio:</strong> Segure sempre pela base — a faca e o capuz são partes delicadas</li>
-            </ul>
+            <div class="accordion accordion-halloween" id="accordionHalloween">
+                <!-- Especificações Técnicas -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            🪓 Especificações Técnicas
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionHalloween">
+                        <div class="accordion-body">
+                            <ul class="especificacoes_halloween">
+                                <li><strong>Material:</strong> PLA+ premium importado (biodegradável e livre de toxinas)
+                                </li>
+                                <li><strong>Dimensões:</strong> 17cm (altura) x 8cm (largura) x 7cm (profundidade)</li>
+                                <li><strong>Peso:</strong> 210g (base reforçada para estabilidade)</li>
+                                <li><strong>Acabamento:</strong> Pintura artesanal com 7 camadas + verniz protetor fosco
+                                </li>
+                                <li><strong>Base:</strong> Inclusa – cenário de crime com respingos e efeitos de
+                                    iluminação simulada</li>
+                                <li><strong>Resolução de impressão:</strong> 0.1mm (ultra detalhada)</li>
+                                <li><strong>Temperatura de resistência:</strong> Até 60°C</li>
+                                <li><strong>Tempo de produção:</strong> 3–5 dias úteis (cada peça é feita sob encomenda)
+                                </li>
+                                <li><strong>Garantia:</strong> 90 dias contra defeitos de fabricação</li>
+                                <li><strong>Certificação:</strong> Produto artesanal registrado</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
 
-            <h3>Por que escolher Miniverse?</h3>
-            <p class="pq_escolher_halloween">
-                ✓ <strong>Qualidade Premium:</strong> Modelagem precisa e pintura manual detalhada<br>
-                ✓ <strong>Sustentabilidade:</strong> Produção ecológica com PLA biodegradável<br>
-                ✓ <strong>Artesanato Local:</strong> Feito por artistas brasileiros apaixonados por cultura pop e
-                cinema<br>
-                ✓ <strong>Embalagem Especial:</strong> Caixa colecionável com espuma protetora e design temático de
-                terror<br>
-                ✓ <strong>Certificado de Autenticidade:</strong> Peça numerada e assinada pelo artista<br>
-                ✓ <strong>Envio Seguro:</strong> Embalagem reforçada com rastreamento completo
-            </p>
+                <!-- Cuidados e Conservação -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#cuidadosCollapse" aria-expanded="false" aria-controls="cuidadosCollapse">
+                            🧹 Cuidados e Conservação
+                        </button>
+                    </h2>
+                    <div id="cuidadosCollapse" class="accordion-collapse collapse" data-bs-parent="#accordionHalloween">
+                        <div class="accordion-body">
+                            <ul class="especificacoes_halloween">
+                                <li><strong>Limpeza:</strong> Utilize pano macio e seco. Evite produtos químicos</li>
+                                <li><strong>Exposição:</strong> Não exponha à luz solar direta ou calor excessivo</li>
+                                <li><strong>Armazenamento:</strong> Guarde em local seco, arejado e protegido da umidade
+                                </li>
+                                <li><strong>Manuseio:</strong> Segure sempre pela base — a faca e o capuz são partes
+                                    delicadas</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Por que escolher Miniverse -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#porqueCollapse" aria-expanded="false" aria-controls="porqueCollapse">
+                            🎃 Por que escolher Miniverse?
+                        </button>
+                    </h2>
+                    <div id="porqueCollapse" class="accordion-collapse collapse" data-bs-parent="#accordionHalloween">
+                        <div class="accordion-body">
+                            <p class="pq_escolher_halloween">
+                                ✓ <strong>Qualidade Premium:</strong> Modelagem precisa e pintura manual detalhada<br>
+                                ✓ <strong>Sustentabilidade:</strong> Produção ecológica com PLA biodegradável<br>
+                                ✓ <strong>Artesanato Local:</strong> Feito por artistas brasileiros apaixonados por
+                                cultura pop e cinema<br>
+                                ✓ <strong>Embalagem Especial:</strong> Caixa colecionável com espuma protetora e design
+                                temático de terror<br>
+                                ✓ <strong>Certificado de Autenticidade:</strong> Peça numerada e assinada pelo
+                                artista<br>
+                                ✓ <strong>Envio Seguro:</strong> Embalagem reforçada com rastreamento completo
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
 
             <div class="acompanha_halloween">
                 <p>
